# libsafet

./: CMakeLists.txt  README.md
examples/: examples.cpp
safet/: condition_variable.hpp  cow.hpp  critical_section.hpp  finally.hpp  future.hpp  memory.hpp  mutex.hpp  optional.hpp  pack.hpp  range.hpp  safet.hpp  variant.hpp
safet/impl/: concepts.hpp
tests/: condition_variable.cpp  cow.cpp  critical_section.cpp  finally.cpp  memory.cpp  optional.cpp  variant.cpp
